Cleanup and republish

--- a/CloudronManifest.json
+++ b/CloudronManifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "org.apache.incubator.guacamole.cloudronapp",
+  "id": "org.apache.guacamole.cloudronapp",
   "title": "Goacamole",
   "author": "Apache Software Foundation",
   "description": "file://DESCRIPTION.md",
