working on test.js

--- a/CloudronManifest.json
+++ b/CloudronManifest.json
@@ -1,6 +1,6 @@
 {
   "id": "org.apache.guacamole.cloudronapp",
-  "title": "Goacamole",
+  "title": "Guacamole",
   "author": "Apache Software Foundation",
   "description": "file://DESCRIPTION.md",
   "changelog": "file://CHANGELOG",
